add local storage, and add next page jumping

--- a/fontend/index.html
+++ b/fontend/index.html
@@ -24,6 +24,11 @@
             <button onclick="handleLogin()" type="button">Login</button>
         </form>
     </div>
+    <!-- <--Error massage> -->
+    <div id="user-login-error" class="error hidden">
+        <h3> User id not found or password is wrong plz try again </h3>
+
+    </div>
 
     <div>
         <!-- Register Section -->
