add comment in a post

--- a/fontend/post.html
+++ b/fontend/post.html
@@ -79,7 +79,7 @@
 
                 </div>
                 <div class="comment-button-holder">
-                    <button id="comment-btn" class="postComment-btn">comment</button>
+                    <button onClick= "handlePostComment" id="comment-btn" class="postComment-btn">comment</button>
 
                 </div>
 
